refactor: react query setup

--- a/src/styles/flex.scss
+++ b/src/styles/flex.scss
@@ -13,3 +13,9 @@
   @extend .flex;
   flex-direction: row;
 }
+
+.flexCenter {
+  @extend .flex;
+  justify-content: center;
+  align-items: center;
+}
